--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
     .buttons {
       margin-top: 20px;
       display: flex;
-      gap: 10px;
+      gap: 0;
       justify-content: center;
-      flex-wrap: wrap;
+      flex-wrap: nowrap; /* keep buttons in one series line */
+      align-items: center;
     }
 
     button {
@@ -85,6 +86,14 @@
       cursor: pointer;
       transition: background 0.2s, transform 0.08s;
       font-size: 1rem;
+    }
+
+    /* add comma separator after each pager button except the last */
+    .buttons button:not(:last-child)::after {
+      content: ",";
+      color: #222;
+      margin-left: 8px;
+      margin-right: 8px;
     }
 
     button:hover { background: #444; transform: translateY(-1px); }
@@ -117,6 +126,13 @@
       <img src="office.jpeg" class="active" alt="Image 1">
       <img src="reception.jpeg" alt="Image 2" >
       <img src="workstation.jpeg" alt="Image 3">
+      <img src="boardroom.jpeg" alt="Image 4">
+      <img src="boardroom2.jpeg" alt="Image 5">
+      <img src="kwa_mdos.jpeg" alt="Image 6">
+      <img src="layout_plan.jpeg" alt="Image 7">
+      <img src="office2.jpeg" alt="Image 8">
+      <img src="workstation2.jpeg" alt="Image 9">
+      <img src="workingstation3.jpeg" alt="Image 10">
     </div>
 
     <div class="buttons" id="pager">
