--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
 
     .buttons {
       margin-top: 20px;
-      display: flex;
-      gap: 0;
+      display: grid;
+      grid-template-columns: repeat(3, auto); /* 3 columns */
+      gap: 8px 12px;
       justify-content: center;
-      flex-wrap: nowrap; /* keep buttons in one series line */
       align-items: center;
     }
 
     button {
+      width: 100%; /* fill each grid cell so columns align */
       background: #222;
       color: #fff;
       border: none;
@@ -86,14 +87,6 @@
       cursor: pointer;
       transition: background 0.2s, transform 0.08s;
       font-size: 1rem;
-    }
-
-    /* add comma separator after each pager button except the last */
-    .buttons button:not(:last-child)::after {
-      content: ",";
-      color: #222;
-      margin-left: 8px;
-      margin-right: 8px;
     }
 
     button:hover { background: #444; transform: translateY(-1px); }
